# AI_Lawyers_Battle_Royale

./: LICENSE  README.md  conductor.py  court_rules.csv  main.py  prompts.py  pyproject.toml  requirements.txt
