[tool.poetry]
name = "ai-lawyers-battle-royale"
version = "0.1.0"
description = ""
authors = ["houfu <houfu@outlook.sg>"]
readme = "README.md"
packages = [{include = "ai_lawyers_battle_royale"}]

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.24.1"
langchain = "^0.0.228"
openai = "^0.27.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
